--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head> 
 	<meta charset="utf-8">
 	<title>Data & Social Science</title>
+	<style>
+		
+body {
+    max-width: 800px;
+}
+		
+p {
+font-family: sans-serif;
+}
+		
+</style>
 </head> 
 <body>
   
