--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ gen lvec = voix if nuance =="LVEC"
 gen lveg = voix if nuance =="LVEG"
 
 foreach x of varlist(lcom-lveg) {
-bysort insee: egen t_`x' = total(`x')
+bysort idbv: egen t_`x' = total(`x')
 }
 
 keep coddep codcom libcom bv bv2 ins vot com insee idbv t_lcom-t_lveg
