--- a/index.html
+++ b/index.html
@@ -1,19 +1,8 @@
 <!doctype html>
 <html>
 <head> 
-<meta charset="utf-8">
-<title>Data & Social Science</title>
-	
-<style>	
-body {
-	width: 200px;
-}
-		
-p {
-	font-family: sans-serif;
-}	
-</style>
-	
+<!-- link to main stylesheet -->
+<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head> 
 <body>
   
@@ -95,7 +84,7 @@ duplicates drop
   
   <pre>
   <code>
-    recode rlgdnm (1=1 "Catholic") (2=2 "Protestant") (3/4=3 "Other christian") (5=4 "Jewish") (6/8=5 "Islamic & other")  (66=6 "No religion") (77/99=.), gen(relig)
+  recode rlgdnm (1=1 "Catholic") (2=2 "Protestant") (3/4=3 "Other christian") (5=4 "Jewish") (6/8=5 "Islamic & other")  (66=6 "No religion") (77/99=.), gen(relig)
     recode rlgdgr (0=0 "not religious") (1/4 = 1 "low religiosity") (5/7 = 2 "medium reliosity") (8/10 = 3 "high religiosity") (else=.), gen(religiosity)
     recode lrscale (0/4 = 1 "left") (5=2 "nini") (6/10=3 "right") (else =4 "no place"), gen(placement)
     recode agea (15/24 = 1 "15-24 ans") (25/34= 2 "25-34 ans") (35/44= 3 "35-44 ans") (45/54= 4 "45-54 ans") (55/64 = 5 "55/64 ans") (65/100 = 6 "65 ans et plus") (else = .),gen (agecod)
